добавил сообщение о том, что нужно подождать пока бот думает и поправил текст поста

--- a/page_film.html
+++ b/page_film.html
@@ -1,12 +1,12 @@
-Маршалл
+Сильнее
 2017
 биографический
 драма
-Реджиналд Хадлин
-Джейкоб Коскофф
-Дэн Стивенс
-София Буш
-Чедвик Боузман
-Кейт Хадсон
-Джеймс Кромвелл
-Сюжет ленты основан на реальном случае из жизни еще совсем молодого адвоката Тергуда Маршалла (Чедвик Боузман), задолго до его назначения в Верховном суде США. В то время как страна собиралась вступить во Вторую мировую войну, находящаяся на грани банкротства Национальная ассоциация содействия прогрессу цветного населения отправляет Маршалла в консервативный штат Коннектикут, чтобы тот выступил адвокатом черного шофера, обвиненного своей работодательницей – богатой светской львицей (Кейт Хадсон) – в сексуальном насилии и покушении на убийство. Связанный порядками сегрегационного суда Маршалл, карьера которого остро нуждалась в громкой победе, начинает сотрудничество с Сэмюэлем Фридманом (Джош Гэд) – молодым еврейским адвокатом, еще не успевшим попробовать себя в судебном деле. Вместе Маршалл и Фридман начинают борьбу против страхов и предрассудков, стремясь открыть правду в сенсационном судебном разбирательстве, которое заложит основу движения за гражданские права.
+1 час 59 минут
+Дэвид Гордон Грин
+Джейк Джилленхол
+Татьяна Маслани
+Миранда Ричардсон
+Ричард Лэйн мл.
+Нэйт Ричман
+Разгильдяй Джефф Бауман (Джейк Джилленхол) не отличается спортивностью, но приходит в 2013 году на Бостонский марафон, чтобы поддержать свою бывшую девушку Эрин (Татьяна Маслани). Когда чеченские террористы устраивают взрыв, парень оказывается поблизости от эпицентра, и ему отрывает ноги. Медикам чудом удается его спасти. Придя в себя, Джефф описывает ФБР одного из преступников, и это помогает властям вычислить злодеев. О поступке Баумана становится известно, и парня объявляют героем города – символом бостонского мужества перед лицом трагедии. Однако Джефф себя героем не считает. Хотя его поддерживает вся семья и вернувшая к нему Эрин, реабилитация проходит тяжело. Джефф, чье существование и раньше было бесцельно, теперь вовсе не знает, зачем ему жить. Он отказывается от интервью, впадает в депрессию и отталкивает от себя Эрин, потому что чувствует, что не достоин ее любви и заботы.
