добавил обработку ошибок в поиске фильма

--- a/page_film.html
+++ b/page_film.html
@@ -1,12 +1,12 @@
-Сильнее
-2017
-биографический
-драма
-1 час 59 минут
-Дэвид Гордон Грин
-Джейк Джилленхол
-Татьяна Маслани
-Миранда Ричардсон
-Ричард Лэйн мл.
-Нэйт Ричман
-Разгильдяй Джефф Бауман (Джейк Джилленхол) не отличается спортивностью, но приходит в 2013 году на Бостонский марафон, чтобы поддержать свою бывшую девушку Эрин (Татьяна Маслани). Когда чеченские террористы устраивают взрыв, парень оказывается поблизости от эпицентра, и ему отрывает ноги. Медикам чудом удается его спасти. Придя в себя, Джефф описывает ФБР одного из преступников, и это помогает властям вычислить злодеев. О поступке Баумана становится известно, и парня объявляют героем города – символом бостонского мужества перед лицом трагедии. Однако Джефф себя героем не считает. Хотя его поддерживает вся семья и вернувшая к нему Эрин, реабилитация проходит тяжело. Джефф, чье существование и раньше было бесцельно, теперь вовсе не знает, зачем ему жить. Он отказывается от интервью, впадает в депрессию и отталкивает от себя Эрин, потому что чувствует, что не достоин ее любви и заботы.
+Ярость
+2014
+боевик
+война
+Дэвид Эйер
+Дэвид Эйер
+Брэд Питт
+Шайа ЛаБаф
+Логан Лерман
+Скотт Иствуд
+Майкл Пенья
+Действие картины будет вращаться в роковом для нацистского режима 1945 году, когда Германия бросала последние силы, чтобы дать отпор армиям СССР на востоке страны и США на западе. Не сложно догадаться, что Питт будет играть солдата именно американской армии, который будет руководить экипажем целого танка брошенного в самое пекло кровавых сражений на границе.
